test/spec_vectors/simd_bitwise/fail/module_29.wat
(module (func $v128.bitselect-arg-empty (result v128) (v128.bitselect)))